--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,11 @@
     <ul>
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/about">About</a></li>
-      <li><a routerLink="/works">works</a></li>
+      <li><a routerLink="/works">Works</a></li>
+      <li><button class="btn btn-primary">Resume</button></li>
     </ul>
   </nav>
 </header>
 
 <router-outlet></router-outlet>
-<footer>Tiana's website</footer>
+<footer>Tiana's website built with Angular 18</footer>
