--- a/src/pages/about/about.component.html
+++ b/src/pages/about/about.component.html
@@ -1,1 +1,35 @@
-<h2>This is about</h2>
+<section>
+    <h1>About</h1>
+
+    <p>
+      Hello! My name is Christianah and I enjoy creating things that
+      live on the internet. My interest in web development started
+      back in 2012 when I was introduced to it in JSS3 where we
+      created a sign up page for the school and this sparked an
+      interest and passion web development
+    </p>
+    <p>
+      Fast-forward to today, and I’ve had the privilege of working at a FinTech company as an intern, an EduTech company and built
+      some personal projects. My main focus these days is building
+      accessible, inclusive products and digital experiences a
+      reputable company for a variety of clients.
+    </p>
+    <p>
+      Here are a few technologies I’ve been working with recently:
+    </p>
+
+    <ul>
+        <li>
+          Angular
+        </li>
+        <li>
+          ReactJS
+        </li>
+        <li>
+         TypeScript
+        </li>
+        <li>
+         C
+        </li>
+    </ul>
+  </section>
